# stop-covid19

./: CMakeLists.txt  README.md  VisualizeDangerIntersection.cpp  VisualizeDangerIntersection.hpp  YOLOv3.cpp  YOLOv3.hpp  run.sh  yolov3-opencv.cpp
models/wilderperson/: _.names  yolov3-tiny.cfg
playground/: CMakeLists.txt
playground/drawingDanger/: CMakeLists.txt  main.cpp
